--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,5 @@
 {
     "workbench.preferredLightColorTheme": "Visual Studio Light",
-    "workbench.colorTheme": "Default Light+",
+    "workbench.colorTheme": "Default Dark+",
     "workbench.preferredHighContrastColorTheme": "Default Light+"
 }
